--- a/src/components/homePage/introSection/introSection.css
+++ b/src/components/homePage/introSection/introSection.css
@@ -5,6 +5,7 @@
   alignment: center;
   align-content: center;
   align-items: center;
+  width: 100%;
   background-color: #424651;
 }
 
