--- a/src/components/homePage/navBarComponent/navBarComponent.css
+++ b/src/components/homePage/navBarComponent/navBarComponent.css
@@ -8,7 +8,7 @@ span.navbar-toggler-icon{
   left: 0%;
   top: 0%;
   width: 100%;
-  height: 12%;
+  height: 11%;
   color: white !important;
 }
 
